Fixed spacing problem

--- a/src/App.css
+++ b/src/App.css
@@ -82,7 +82,6 @@ h1 {
 table {
   border-collapse: collapse;
   width: 100%;
-  margin: 20px auto;
   border-radius: 10px;
   overflow: hidden;
   min-width: 250px;
@@ -113,22 +112,6 @@ td {
 th {
   text-align: center;
   padding: 8px;
-}
-
-
-.card {
-  background-color: #fdfdfd;
-  border-radius: 20px;
-  margin: 180px auto auto;
-  position: relative;
-  box-shadow: 0 5px 5px rgba(0,0,0,0.15);
-  transition: all 0.3s ease-in-out;
-  justify-content: center;
-  align-items: center;
-  width: fit-content;
-  height: fit-content;
-  padding: 20px;
-
 }
 
 .table_elements {
