--- a/src/Pages/Work.css
+++ b/src/Pages/Work.css
@@ -1,6 +1,4 @@
 .infoAndPhotosContainer{
-    margin-top: 80px;
-    margin-bottom: 80px;
     display: flex;
     justify-content: center;
     width: 100%;
@@ -56,8 +54,6 @@
 }
 
 .tableContainer {
-    margin-top: 50px;
-    margin-bottom: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -65,8 +61,6 @@
 }
 
 .buttonContainer {
-    margin-top: 50px;
-    margin-bottom: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
